_src/_assets/css/layout.css
body {
	margin: 0;
	padding-top: 6.5em;
	position: relative;
	min-width: 100%;
	min-height: 100vh;
	height: auto;
	background: linear-gradient(-7.5deg, #f1f1f1 60%, #fff);
	border-top: .3em solid  #12073f;
	overflow-x: hidden;
}

@media( min-width: 65em ) {
	body {
		border-top-width: .42vw;
	}
}
body:before {
	content: "";
	position: absolute;
	height: .3em;
	top: -.3em;
	right: 0;
	width: 10%;
	background: #ef4136;
	clip-path: polygon(.22em 0, 100% 0%, 100% 100%, 0% 100%);
}
@media( min-width: 65em ) {
	body:before {
		height: .42vw;
		top: -.42vw;
	}
}

main {
	padding: 5%;
	max-width: 90em;
	margin: 0 auto;

}

.w-logo {
	position: absolute;
	right: 1.25vw;
	top: 1.25vw;
	max-width: 7.5em;
	min-width: 3.25em;
	width: 8%;
}

.sub {
	margin: 5vmin 0 5em 0;
	clear: both;
}
.sub:after {
	content: "";
	display: table;
	clear: both;
}
.sub:first-of-type { 
	margin-top: 0;
}

.sub img {
	display: block;
	margin: 1.5em auto 1em auto;
	width: 100%;
	max-width: 25em;
	clear: both;
}
@media( min-width: 31em ) {
	.sub img {
		width: auto;
		max-width: 25em;
	}
}

.sub img.fullbleed {
	max-width: 130%;
	width: 130%;
	margin-left: -15%;
}
@media( min-width: 46.875em ) {
	.sub img {
		margin: 1.5em auto 1em 5%;
		float: right;
	}
	.sub img.fullbleed {
		width: auto;
		margin-left: 2.5%;
		max-width: 45em !important;
		margin-right: -20em;
	}
}


@media( max-width: 46.8125em ) {
	.sub img+.copy {
		display: block;
		margin-top: -4em;
		position: relative;
		padding-top: 2.5em;
	}
	.sub img+.copy:before {
		content: "";
		display: block;
		width: 120%;
		top: -3em;
		left: -10%;
		height: 8em;
		position: absolute;
		background: linear-gradient(-180deg, transparent, #f1f1f1 80%);
	}
	.sub .copy p {
		position: relative;
		z-index: 2;
	}
}

@supports( shape-margin: 1px ) {
	@media( min-width: 46.875em ) {
		.sub img {
			shape-margin: 5%;
			z-index: -1;
		}
		.sub.sub-books img { shape-outside: url(/_assets/img/books.gif); }
		.sub.sub-work img { shape-outside: url(/_assets/img/work.gif); }
	}
}

@supports( display: grid ) {
	@media( min-width: 35em ) {
		.sub:nth-of-type(odd) img {
			grid-column: 1; 
			grid-row: 1 / -1;
			align-self: center;
			max-width: 25em;
		}
	}
	@media( min-width: 80em ) {
		.body {
			display: grid;
			grid-template-columns: repeat( 15, 1fr );
		}
		.body .head {
			grid-column: 2 / span 13;
		}
		.sub {
			display: grid;
			grid-column: 2 / span 13;
			grid-template-columns: auto auto;
			grid-template-rows: auto auto;
			grid-gap: 0 3.5%;
		}
		.sub.sub-busy {
			grid-column: 3 / span 13; 
		}
		.sub:nth-of-type(odd) { 
			grid-column: 3 / span 13;
		}
		.sub .section-head {
			grid-column: 1 / 1;
			align-self: flex-end;
		}
		.sub .copy {
			grid-column: 1 / 2;
		}
		.sub img {
			grid-column: 2; 
			grid-row: 1 / -1;
			align-self: center;
			max-width: 25em;
		}
		.sub:first-of-type { 
			grid-column: 4 / span 11; 
		}
		.sub:nth-of-type(odd) {
			display: grid;
			grid-template-columns: auto auto;
			grid-template-rows: auto 1fr;
			grid-gap: 0 2.5%;
		}
		.sub:nth-of-type(odd) .section-head {
			grid-column: 2 / span 2;
		}
		.sub:nth-of-type(odd) .copy {
			grid-column: 2 / span 2;
		}
		.sub:nth-of-type(odd) img { 
			grid-column: 1;
			margin: 0 5% 0 0;
		}
		.sub:nth-of-type(odd) .section-head,
		.sub:nth-of-type(odd) .copy { 
			grid-column: 2 / -1;
		}
	}
}


.site-foot {
	opacity: .9;
	border-top: 1px solid rgba(0,0,0,.2);
	text-align: right;
	clear: both;
	padding-top: .75em;
	max-width: 1200px;
	padding: 1.5%;
	margin: 5em auto 0 auto;
}

